opam-version: "2.0"
name: "McLTT"
version: "0.1"
synopsis: "A Bottom-up Approach to Implementing A Proof Assistant"
description: """
In McLTT, we build a verified, runnable typechecker for Martin-Löf type theory. After
the accomplishment of this project, we will obtain an executable, to which we can feed
a program in Martin-Loef type theory, and this executable will check whether this
program has the specified type. McLTT is novel in that it is implemented in
Coq. Moreover, we will prove that the typechecking algorithm extracted from Coq is
sound and complete: a program passes typechecking if and only if it is a well-typed
program in MLTT. This will be the first verified proof assistant (despite being
elementary) and serves as a basis for future extensions.
"""
maintainer: "the CompLogic group, McGill University"
authors: "the CompLogic group, McGill University"
license: "N/A"
homepage: "https://beluga-lang.github.io/McLTT/"
bug-reports: "https://github.com/Beluga-lang/McLTT/issues"
dev-repo: "git+https://github.com/Beluga-lang/McLTT"
depends: [
  "ocaml" {= "4.14.2"}
  "coq" {= "8.20.0"}
  "menhir" {>= "20240715"}
  "coq-menhirlib" {>= "20240715"}
  "coq-equations" {= "1.3"}
  "sherlodoc" {coqdoc}
]
build: [
  [make]
  [make
   "coqdoc"] {coqdoc}
]
