(include_subdirs no)

(library
 (name Mcltt)
 (modules Main Lexer PrettyPrinter)
 (libraries MclttExtracted)
 ; (inline_tests)
 ; (preprocess
 ;  (pps ppx_inline_test))
)

(executable
 (name mcltt)
 (public_name mcltt)
 (modules Mcltt)
 (libraries Mcltt))

(env
 (dev
  (flags
   (:standard -w -67 -w -32 -w -33 -w -39))))

(ocamllex Lexer)
