(include_subdirs no)

(library
 (name Mcltt)
 (public_name mcltt.driver)
 (modules Main Lexer PrettyPrinter Test)
 (libraries MclttExtracted)
 (inline_tests
  (deps
   (glob_files_rec ../examples/*.mcl)))
 (preprocess
  (pps ppx_expect)))

(executable
 (name mcltt)
 (public_name mcltt)
 (modules Mcltt)
 (libraries Mcltt))

(env
 (dev
  (flags
   (:standard -w -67 -w -32 -w -33 -w -39))))

(ocamllex Lexer)

(documentation)
