(include_subdirs no)

(library
 (name Mctt)
 (public_name mctt.driver)
 (modules Main Lexer PrettyPrinter Test)
 (libraries McttExtracted)
 (inline_tests
  (deps
   (glob_files_rec ../examples/*.mctt)))
 (preprocess
  (pps ppx_expect)))

(executable
 (name mctt)
 (public_name mctt)
 (modules Mctt)
 (libraries Mctt))

(env
 (dev
  (flags
   (:standard -w -67 -w -32 -w -33 -w -39))))

(ocamllex Lexer)

(documentation)
